# AdventOfCode

./: .gitignore  1.c  10.c  13.c  14.c  15.c  16.c  17.c  2.c  3.c  4.c  8.c  9.c  MD5.c  MD5.h  README.md
2015/C/13/: 13_2.input
2015/C/16/: 16_1.input
2015/C/7/: 7.c
2015/C/8/: 8.c
2015/C/9/: 9.c
2022/java/src/com/nidjo123/: Day.java  Main.java  Solution.java  Utils.java
2023/day01/src/: main.rs
2023/day02/src/: main.rs
2023/day03/src/: main.rs
2023/day04/src/: main.rs
2023/day05/src/: main.rs
2023/day06/src/: main.rs
2023/day07/src/: counter.rs  main.rs
2023/day08/src/: main.rs
2023/day09/src/: main.rs
2023/day10/src/: main.rs
2023/day11/src/: main.rs
2023/day12/src/: main.rs
2023/day13/src/: main.rs
2023/day14/src/: main.rs
2024/cpp/: CMakeLists.txt  Main.cpp
2024/cpp/days/: Day.cpp  Day.h  Day01.cpp  Day01.h  Day02.cpp  Day02.h  Day03.cpp  Day03.h  Day04.cpp  Day04.h  Day05.cpp  Day05.h  Day06.cpp  Day06.h  Day07.cpp  Day07.h  Day08.cpp  Day08.h
2024/cpp/util/: Util.cpp  Util.h
2025/haskell/day01/: Solution.hs
2025/haskell/day02/: Solution.hs
2025/haskell/day03/: Solution.hs
2025/haskell/day04/: Solution.hs
2025/haskell/day05/: Solution.hs
2025/haskell/day06/: Solution.hs
2025/haskell/day07/: Solution.hs
2025/haskell/day08/: Solution.hs
2025/haskell/day09/: Solution.hs
C/: 20.c  5.c  6.c
C/11/: 11.c
C/12/: 12_1.c  12_2.c
C/18/: 18.c
C/4/: MD5.c
java/hr/fer/aoc/day21/: 21.info  Day21.java  Game.java
java/hr/fer/aoc/day22/: 22.info
java/hr/fer/aoc/day23/: Day23.java
(+48 files in other folders)
